test/scc/expr/semantic-errors/155.t
void test()
{
    char a[4] = { "abc", 'd' };
}